--- a/Lab2-IteratorCA/Lab2-IteratorCA.csproj
+++ b/Lab2-IteratorCA/Lab2-IteratorCA.csproj
@@ -8,4 +8,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Lab2CL\Lab2CL.csproj" />
+    </ItemGroup>
+
 </Project>
